{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 99,
  "lineage": "94ad73eb-b0fd-b063-9c8f-86dc56b19d05",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "example_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/my-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/auth-realm": "Authentication Required",
                  "nginx.ingress.kubernetes.io/auth-secret": "basic-auth",
                  "nginx.ingress.kubernetes.io/auth-type": "basic"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "my-ingress",
                "namespace": "default",
                "resource_version": "1911",
                "uid": "067ec7a9-faff-4e71-9b36-3e606781aad7"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "web-app.kubernetes.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "web-app",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_secret.auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/terraform-example-network-policy",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "terraform-example-network-policy",
                "namespace": "default",
                "resource_version": "1891",
                "uid": "1e879b6f-870c-43ea-8cd6-3647d07c9ecc"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": []
                  }
                ],
                "ingress": [
                  {
                    "from": [],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [
                      {
                        "key": "name",
                        "operator": "In",
                        "values": [
                          "api",
                          "webfront"
                        ]
                      }
                    ],
                    "match_labels": {}
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/web-app",
            "metadata": [
              {
                "annotations": {
                  "metallb.universe.tf/ip-allocated-from-pool": "default"
                },
                "generation": 0,
                "labels": {
                  "webappname": "web-app"
                },
                "name": "web-app",
                "namespace": "default",
                "resource_version": "4683",
                "uid": "805b32f7-9634-4700-bf2e-f87a0651e507"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.96.18.151",
                "cluster_ips": [
                  "10.96.18.151"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31223,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "webappname": "web-app"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "192.168.1.220"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}